--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1{
     text-align: center;
     gap:0.40rem;
     padding: 1.6rem;
-    border-radius: 0.50rem;
+    border-radius: 0.5rem;
     border: 3px solid rgb(127, 180, 249);
     background-color: white;
     box-shadow: 0rem 0rem 0.5rem 0 rgb(56, 142, 255);
@@ -51,17 +51,59 @@ h1{
 .wrapper .aws:hover{
     cursor: pointer;
     background-color: rgb(214, 231, 250);
-    border-radius: 0.50rem;
+    border-radius: 0.5rem;
     padding: 0 0.3rem;
     transition: background-color, padding 0.2s;
 }
 
 .wrapper .right{
     font-weight: 600;
+    border-radius: 0.5rem;
+    padding: 0 0.3rem;
     background-color: rgb(119, 215, 119);
 }
 
 .wrapper .incorrect{
     font-weight: 600;
+    border-radius: 0.5rem;
+    padding: 0 0.3rem;
     background-color: rgb(216, 48, 48);
+}
+.wrapper .right:hover{
+    font-weight: 600;
+    border-radius: 0.5rem;
+    padding: 0 0.3rem;
+    background-color: rgb(119, 215, 119);
+}
+
+.wrapper .incorrect:hover{
+    font-weight: 600;
+    border-radius: 0.5rem;
+    padding: 0 0.3rem;
+    background-color: rgb(216, 48, 48);
+}
+
+.btn {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 1.5rem;
+    border-radius: 0.5rem;
+    padding: 0.8rem 2rem;
+    margin-bottom: 2rem;
+    border: none;
+    background-color: rgb(61, 162, 61);
+    color: white;
+}
+
+.btn:hover {
+    cursor: pointer;
+    transform: scale(0.9);
+    opacity: 0.8;
+    transition: all 0.1s;
+}
+
+.btn:active {
+    cursor: pointer;
+    transform: scale(0.9);
+    background-color: rgb(21, 67, 21);
+    transition: all 0.1s;
 }
