--- a/style.css
+++ b/style.css
@@ -7,8 +7,15 @@
 body{
     display: flex;
     flex-direction: column;
-    align-items: center;
     text-align: center;
+    gap: 2rem;
+    background-color: rgb(214, 231, 250);
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 2rem;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
