--- a/style.css
+++ b/style.css
@@ -114,3 +114,15 @@ h1{
     background-color: rgb(21, 67, 21);
     transition: all 0.1s;
 }
+
+.result {
+    border-radius: 0.5rem;
+    border: 2px solid black;
+    background-color: white;
+    padding: 0.5rem 1.5rem;
+    line-height: 1.8rem;
+}
+
+.score , .total{
+    font-weight: 600;
+}
