--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Roboto+Mono&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -9,7 +9,9 @@ body{
     flex-direction: column;
     text-align: center;
     gap: 2rem;
-    background-color: rgb(214, 231, 250);
+    background-image: linear-gradient(315deg, rgb(220, 236, 255) 0%, rgb(168, 207, 253) 100%);
+    background-attachment: fixed;
+    height: 100vh;
 }
 
 .container {
@@ -17,9 +19,9 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 2rem;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: 400;
-    background-color: rgb(214, 231, 250);
+    
 }
 
 h1{
@@ -29,7 +31,7 @@ h1{
     font-size: max(2rem, 4rem);
     margin-top: 1rem;
     color: white;
-    text-shadow: rgb(24, 31, 42) 0px 0px 5px;
+    text-shadow: rgb(24, 31, 42) 0px 0px 3px;
 }
 
 .wrapper{
@@ -37,16 +39,17 @@ h1{
     flex-direction: column;
     text-align: center;
     gap:0.40rem;
-    padding: 1.6rem;
+    padding: 1.9rem;
     border-radius: 0.8rem;
-    border: 3.5px solid rgb(127, 180, 249);
+    /*border: 3.5px solid rgb(127, 180, 249);*/
+    box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
     background-color: white;
     width: clamp(20rem, 70%, 50rem);
     margin: 0 max(2rem, 30rem);
 }
 
 .wrapper .qtn{
-    margin-bottom: 0.85rem;
+    margin-bottom: 1.5rem;
     font-size: 1.3rem;
     font-weight: 800;
 }
@@ -116,7 +119,7 @@ h1{
 
 .result {
     border-radius: 0.8rem;
-    border: 2px solid black;
+    border: 3px solid black;
     background-color: white;
     padding: 0.5rem 1.5rem;
     line-height: 1.8rem;
