--- a/style.css
+++ b/style.css
@@ -70,19 +70,22 @@ h1{
     border-radius: 0.8rem;
     padding: 0 0.3rem;
     background-color: rgb(119, 215, 119);
+    transition: background-color 0.2s;
 }
 
 .wrapper .incorrect{
     font-weight: 600;
     border-radius: 0.8rem;
     padding: 0 0.3rem;
-    background-color: rgb(216, 48, 48);
+    background-color: rgb(208, 55, 55);
+    transition: background-color 0.2s;
 }
 .wrapper .right:hover{
     font-weight: 600;
     border-radius: 0.8rem;
     padding: 0 0.3rem;
     background-color: rgb(119, 215, 119);
+    transition: background-color 0.2s;
 }
 
 .wrapper .incorrect:hover{
@@ -90,6 +93,7 @@ h1{
     border-radius: 0.8rem;
     padding: 0 0.3rem;
     background-color: rgb(216, 48, 48);
+    transition: background-color 0.2s;
 }
 
 .btn {
